--- a/index.html
+++ b/index.html
@@ -2,9 +2,71 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>INFO'CLIK</title>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+<header>
+  <div class="logo">
+  <img src="logo.png" alt="Logo" width="2em">
+  <p>INFO'CLIK</p>
+</div>
+<div class="recherche">
+  <input type="search">
+</div>
+<nav>
+  <ul>
+    <li><a href="index.html">Mon compte</a></li>
+    <li><img src="panier.png"alt="panier"width="1.5em"><a href="index.html">Mon panier</a></li>
+  </ul>
+  <div class="Menu">
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="presentation.html">Nos produits</a></li>
+      <li><a href="contact.html">Contactez-nous</a></li>
+    </div>
+</header>
+<div class="produit1">
+  <h1></h1>
+  <img src="ordi.jpeg"alt="ordinateur portable"width="20px">
+  <input type="submit" value="Ajouter au panier" />
+</div>
 
+<div class="produit2">
+  <h1></h1>
+  <img src="ordibureau.jpeg"alt="ordinateur bureau" width="20px">
+  <input type="submit" value="Ajouter au panier" />
+
+</div>
+
+<div class="produit3">
+  <h1></h1>
+  <img src="tablette.jpeg" alt="tablette"width="20px">
+  <input type="submit" value="Ajouter au panier" />
+</div>
+
+
+
+<footer>
+  <div class="menubis">
+    <nav>
+      <ul>
+        <li>Accueil</li>
+        <li>Nos produits</li>
+        <li>Contactez-nous</li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="réseau">
+    <nav>
+      <ul>
+        <li><img src="facebook.png" alt="logo facebook" width="1em"></li>
+        <li><img src="twitter.png" alt="logo twitter" width="1em"></li>
+        <li><img src="insta.png" alt="logo insta" width="1em"></li>
+      </ul>
+    </nav>
+  </div>
+</footer>
   </body>
 </html>
