--- a/index.html
+++ b/index.html
@@ -7,45 +7,55 @@
   </head>
   <body>
 <header>
-  <div class="logo">
-  <img src="logo.png" alt="Logo" width="2em">
+  <div class="header">
+    <ul>
+     <li><img src="logo.png" alt="Logo" width="177px"></li>
+     <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
+     <li><img src="panier.png"alt="panier"width="50px"></li>
+   </ul>
+  </div>
+
   <p>INFO'CLIK</p>
-</div>
-<div class="recherche">
-  <input type="search">
-</div>
-<nav>
-  <ul>
-    <li><a href="index.html">Mon compte</a></li>
-    <li><img src="panier.png"alt="panier"width="1.5em"><a href="index.html">Mon panier</a></li>
-  </ul>
+
   <div class="Menu">
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="presentation.html">Nos produits</a></li>
       <li><a href="contact.html">Contactez-nous</a></li>
-    </div>
+    </ul>
+  </div>
 </header>
+
 <div class="produit1">
-  <h1></h1>
-  <img src="ordi.jpeg"alt="ordinateur portable"width="20px">
-  <input type="submit" value="Ajouter au panier" />
+  <a target="_blank" href="presentation.html">
+    <img src="ordi.jpeg" alt="Ordinateur portable" width="300" height="200">
+  </a>
+  <div class="Nom">
+    <h1>PC portable Acer ASPIRE A114-31-C7L8</h1>
+    <h2> Les points forts:</h2>
+    <ul>
+      <li>Ecran LCD 14" HD</li>
+      <li>Processeur Intel Celeron N3350</li>
+      <li>RAM 2Go - 32 Go eMMC - Carte graphique Intel HD Graphics 500</li>
+      <li>Windows 10s - Webcam intégrée - HDMI - USB 3.0 - Bluetooth 4.0</li>
+      <li><a href="presentation.html">Voir toutes les caractéristiques</li>
+    </ul>
+ </div>
 </div>
 
 <div class="produit2">
-  <h1></h1>
-  <img src="ordibureau.jpeg"alt="ordinateur bureau" width="20px">
-  <input type="submit" value="Ajouter au panier" />
-
+  <a target="_blank" href="presentation.html">
+    <img src="ordibureau.jpeg" alt="Ordinateur bureau" width="300" height="200">
+  </a>
+  <div class="Nom2">Ordinateur bureau</div>
 </div>
 
 <div class="produit3">
-  <h1></h1>
-  <img src="tablette.jpeg" alt="tablette"width="20px">
-  <input type="submit" value="Ajouter au panier" />
+  <a target="_blank" href="présentation.html">
+    <img src="tablette.png" alt="Tablette" width="300" height="200">
+  </a>
+  <div class="Nom3">Tablette</div>
 </div>
-
-
 
 <footer>
   <div class="menubis">
@@ -61,9 +71,11 @@
   <div class="réseau">
     <nav>
       <ul>
-        <li><img src="facebook.png" alt="logo facebook" width="1em"></li>
-        <li><img src="twitter.png" alt="logo twitter" width="1em"></li>
-        <li><img src="insta.png" alt="logo insta" width="1em"></li>
+        <li><img src="facebook.png.png" alt="logo facebook" width="20px"></li>
+        <li><img src="twitter.png" alt="logo twitter" width="20px"></li>
+        <li><img src="insta.png" alt="logo insta" width="20px"></li>
+        <li><img src="pinterest.png" alt="logo pinterest" width="20px"></li>
+        <li><img src="youtube.png" alt="logo youtube" width="20px"></li>
       </ul>
     </nav>
   </div>
