--- a/contact.html
+++ b/contact.html
@@ -7,25 +7,26 @@
   </head>
   <body>
 <header>
-  <div class="logo">
-  <img src="logo.png" alt="Logo" width="2em">
+  <div class="header">
+    <ul>
+     <li><img src="logo.png" alt="Logo" width="177px"></li>
+     <li><input type="search" size="50%"></li>
+     <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
+     <li><img src="panier.png"alt="panier"width="50px"></li>
+   </ul>
+  </div>
+
   <p>INFO'CLIK</p>
-</div>
-<div class="recherche">
-<input type="search"/>
-</div>
-<nav>
-  <ul>
-    <li><a href="index.html">Mon compte</a></li>
-    <li><img src="panier.png"alt="panier"width="1.5em"><a href="index.html">Mon panier</a></li>
-  </ul>
+
   <div class="Menu">
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="presentation.html">Nos produits</a></li>
       <li><a href="contact.html">Contactez-nous</a></li>
-    </div>
+    </ul>
+  </div>
 </header>
+
 <footer>
   <div class="menubis">
     <nav>
