mise en page page d'accueil

--- a/index.html
+++ b/index.html
@@ -10,29 +10,35 @@
   <div class="header">
     <ul>
      <li><img src="logo.png" alt="Logo" width="177px"></li>
-     <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
-     <li><img src="panier.png"alt="panier"width="50px"></li>
+     <div class="nomEntreprise">
+     <li>INFO'CLIK</li>
+   </div>
    </ul>
   </div>
 
-  <p>INFO'CLIK</p>
+
 
   <div class="Menu">
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="presentation.html">Nos produits</a></li>
       <li><a href="contact.html">Contactez-nous</a></li>
+      <div class="connexion">
+      <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
+      <li><img src="panier.png"alt="panier"width="50px"></li>
+    </div>
     </ul>
   </div>
 </header>
 
 <div class="produit1">
-  <a target="_blank" href="presentation.html">
-    <img src="ordi.jpeg" alt="Ordinateur portable" width="300" height="200">
-  </a>
+  <div class="image1"><a target="_blank" href="presentation.html">
+    <img src="ordi2.jpeg" alt="Ordinateur portable" width="300" height="200">
+  </a></div>
+
   <div class="Nom">
-    <h1>PC portable Acer ASPIRE A114-31-C7L8</h1>
-    <h2> Les points forts:</h2>
+    <h2>PC portable Acer ASPIRE A114-31-C7L8</h2>
+    <h3> Les points forts:</h3>
     <ul>
       <li>Ecran LCD 14" HD</li>
       <li>Processeur Intel Celeron N3350</li>
@@ -44,18 +50,41 @@
 </div>
 
 <div class="produit2">
-  <a target="_blank" href="presentation.html">
-    <img src="ordibureau.jpeg" alt="Ordinateur bureau" width="300" height="200">
-  </a>
-  <div class="Nom2">Ordinateur bureau</div>
+<div class="image2">  <a target="_blank" href="presentation.html">
+    <img src="ordi.jpeg" alt="Ordinateur bureau" width="300" height="200">
+  </a></div>
+
+  <div class="Nom2">
+    <h2> PC de bureau Lenovo IDEACENTRE AIO 520-24IKU F0D20065FR </h2>
+    <h3>Les points forts:</h3>
+    <ul>
+      <li>Ecran LED 23,8" Full HD</li>
+      <li>Processeur Intel® Core™ i3-6006U</li>
+      <li>RAM 4 Go - 2 To SATA - Carte graphique Intel HD Graphics</li>
+      <li>Windows 10 - Graveur DVD - HDMI - USB 3.0 - Bluetooth 4.0</li>
+      <li><a href="presentation.html">Voir toutes les caractéristiques</li>
+    </ul>
+</div>
 </div>
 
 <div class="produit3">
-  <a target="_blank" href="présentation.html">
-    <img src="tablette.png" alt="Tablette" width="300" height="200">
-  </a>
-  <div class="Nom3">Tablette</div>
+  <div class="image3>"<a target="_blank" href="présentation.html">
+    <img src="tablette.jpeg" alt="Tablette" width="300" height="200">
+  </a></div>
+
+  <div class="Nom3">
+    <h2> Tablette tactile Samsung GALAXY TAB S3 ARGENT 32 GO WIFI </h2>
+    <h3>Les points forts:</h3>
+    <ul>
+      <li>Ecran capacitif 9,7" Super AMOLED QXGA</li>
+      <li>Processeur Samsung Octo Core 2,15 GHz</li>
+      <li>RAM 4 Go - Capacité de stockage 32 Go</li>
+      <li>Android Nougat 7.0 - Epaisseur : 6 mm - Poids : 429 g - Stylet S Pen inclus</li>
+      <li><a href="presentation.html">Voir toutes les caractéristiques</li>
+    </ul>
+  </div>
 </div>
+
 
 <footer>
   <div class="menubis">
