--- a/contact.html
+++ b/contact.html
@@ -10,22 +10,32 @@
   <div class="header">
     <ul>
      <li><img src="logo.png" alt="Logo" width="177px"></li>
-     <li><input type="search" size="50%"></li>
-     <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
-     <li><img src="panier.png"alt="panier"width="50px"></li>
+     <div class="nomEntreprise">
+     <li>INFO'CLIK</li>
+   </div>
    </ul>
   </div>
 
-  <p>INFO'CLIK</p>
+
 
   <div class="Menu">
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="presentation.html">Nos produits</a></li>
       <li><a href="contact.html">Contactez-nous</a></li>
+      <div class="connexion">
+      <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
+      <li><img src="panier.png"alt="panier"width="50px"></li>
+    </div>
     </ul>
   </div>
 </header>
+
+
+
+
+
+
 
 <footer>
   <div class="menubis">
@@ -41,9 +51,11 @@
   <div class="réseau">
     <nav>
       <ul>
-        <li><img src="facebook.png" alt="logo facebook" width="1em"></li>
-        <li><img src="twitter.png" alt="logo twitter" width="1em"></li>
-        <li><img src="insta.png" alt="logo insta" width="1em"></li>
+        <li><img src="facebook.png.png" alt="logo facebook" width="20px"></li>
+        <li><img src="twitter.png" alt="logo twitter" width="20px"></li>
+        <li><img src="insta.png" alt="logo insta" width="20px"></li>
+        <li><img src="pinterest.png" alt="logo pinterest" width="20px"></li>
+        <li><img src="youtube.png" alt="logo youtube" width="20px"></li>
       </ul>
     </nav>
   </div>
