--- a/presentation.html
+++ b/presentation.html
@@ -10,27 +10,80 @@
   <div class="header">
     <ul>
      <li><img src="logo.png" alt="Logo" width="177px"></li>
-     <li><input type="search" size="50%"></li>
-     <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
-     <li><img src="panier.png"alt="panier"width="50px"></li>
+     <div class="nomEntreprise">
+     <li>INFO'CLIK</li>
+   </div>
    </ul>
   </div>
 
-  <p>INFO'CLIK</p>
+
 
   <div class="Menu">
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="presentation.html">Nos produits</a></li>
       <li><a href="contact.html">Contactez-nous</a></li>
+      <div class="connexion">
+      <li><img src="compteutilisateur.png" alt="icone compte utilisateur"width="50px"></li>
+      <li><img src="panier.png"alt="panier"width="50px"></li>
+    </div>
     </ul>
   </div>
 </header>
 
+<div class="produit1">
+  <div class="image1"><a target="_blank" href="presentation.html">
+    <img src="ordi2.jpeg" alt="Ordinateur portable" width="300" height="200">
+  </a></div>
 
+  <div class="Nom">
+    <h2>PC portable Acer ASPIRE A114-31-C7L8</h2>
+    <h3> Les points forts:</h3>
+    <ul>
+      <li>Ecran LCD 14" HD</li>
+      <li>Processeur Intel Celeron N3350</li>
+      <li>RAM 2Go - 32 Go eMMC - Carte graphique Intel HD Graphics 500</li>
+      <li>Windows 10s - Webcam intégrée - HDMI - USB 3.0 - Bluetooth 4.0</li>
+      <li><a href="presentation.html">Voir toutes les caractéristiques</li>
+    </ul>
+ </div>
+</div>
 
+<div class="produit2">
+<div class="image2">  <a target="_blank" href="presentation.html">
+    <img src="ordi.jpeg" alt="Ordinateur bureau" width="300" height="200">
+  </a></div>
 
+  <div class="Nom2">
+    <h2> PC de bureau Lenovo IDEACENTRE AIO 520-24IKU F0D20065FR </h2>
+    <h3>Les points forts:</h3>
+    <ul>
+      <li>Ecran LED 23,8" Full HD</li>
+      <li>Processeur Intel® Core™ i3-6006U</li>
+      <li>RAM 4 Go - 2 To SATA - Carte graphique Intel HD Graphics</li>
+      <li>Windows 10 - Graveur DVD - HDMI - USB 3.0 - Bluetooth 4.0</li>
+      <li><a href="presentation.html">Voir toutes les caractéristiques</li>
+    </ul>
+</div>
+</div>
 
+<div class="produit3">
+  <div class="image3>"<a target="_blank" href="présentation.html">
+    <img src="tablette.jpeg" alt="Tablette" width="300" height="200">
+  </a></div>
+
+  <div class="Nom3">
+    <h2> Tablette tactile Samsung GALAXY TAB S3 ARGENT 32 GO WIFI </h2>
+    <h3>Les points forts:</h3>
+    <ul>
+      <li>Ecran capacitif 9,7" Super AMOLED QXGA</li>
+      <li>Processeur Samsung Octo Core 2,15 GHz</li>
+      <li>RAM 4 Go - Capacité de stockage 32 Go</li>
+      <li>Android Nougat 7.0 - Epaisseur : 6 mm - Poids : 429 g - Stylet S Pen inclus</li>
+      <li><a href="presentation.html">Voir toutes les caractéristiques</li>
+    </ul>
+  </div>
+</div>
 
 
 <footer>
@@ -47,9 +100,11 @@
   <div class="réseau">
     <nav>
       <ul>
-        <li><img src="facebook.png" alt="logo facebook" width="1em"></li>
-        <li><img src="twitter.png" alt="logo twitter" width="1em"></li>
-        <li><img src="insta.png" alt="logo insta" width="1em"></li>
+        <li><img src="facebook.png.png" alt="logo facebook" width="20px"></li>
+        <li><img src="twitter.png" alt="logo twitter" width="20px"></li>
+        <li><img src="insta.png" alt="logo insta" width="20px"></li>
+        <li><img src="pinterest.png" alt="logo pinterest" width="20px"></li>
+        <li><img src="youtube.png" alt="logo youtube" width="20px"></li>
       </ul>
     </nav>
   </div>
